--- a/Exercises/P2-UsedVehiclePricePredictionCL.ipynb
+++ b/Exercises/P2-UsedVehiclePricePredictionCL.ipynb
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -144,7 +144,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -254,7 +254,7 @@
        "4  32488  2013    22816    TN       Jeep     Wrangler"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -265,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -293,7 +293,7 @@
        "(500000, 6)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -338,7 +338,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -349,7 +349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -385,7 +385,7 @@
        "Name: Price, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -421,10 +421,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c783bb2fd0>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a14fabac88>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -454,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -479,10 +479,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.axes._subplots.AxesSubplot at 0x1c784b71390>"
+       "<matplotlib.axes._subplots.AxesSubplot at 0x1a155d22f60>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -540,7 +540,7 @@
        "Index(['Price', 'Year', 'Mileage', 'State', 'Make', 'Model'], dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -558,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -577,7 +577,7 @@
    },
    "outputs": [],
    "source": [
-    "data=data.sample(n=10000, random_state=1) # Se toma una muestra aleatoria de la base para hacer los entrenamientos y calibración de parametros"
+    "data=data.sample(n=50000, random_state=1) # Se toma una muestra aleatoria de la base para hacer los entrenamientos y calibración de parametros"
    ]
   },
   {
@@ -906,45 +906,6 @@
    "metadata": {},
    "source": [
     "The Predictor Dataset will be hace 1000 observations and 594 variables"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/",
-     "height": 34
-    },
-    "colab_type": "code",
-    "executionInfo": {
-     "elapsed": 369,
-     "status": "ok",
-     "timestamp": 1593378500635,
-     "user": {
-      "displayName": "Catalina Lago",
-      "photoUrl": "",
-      "userId": "05060712323662355960"
-     },
-     "user_tz": 300
-    },
-    "id": "MxzP-ph3sxOy",
-    "outputId": "adb3c648-c904-48b8-ebbe-eb0f345cb187"
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(10000, 26)"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "X.shape"
    ]
   },
   {
